--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,14 @@ install(DIRECTORY include/${PROJECT_NAME}/
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_opw_kinematics.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
+catkin_add_gtest(${PROJECT_NAME}-test
+  test/abb2400_tests.cpp
+  test/abb_irb2400_manipulator_ikfast_solver.cpp
+)
+
+if(TARGET ${PROJECT_NAME}-test)
+  target_compile_definitions(${PROJECT_NAME}-test PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_HAS_LIBRARY)
+endif()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
