Added a new set of tests based on JeroenDM's kuka tests that compute FK, solve the IK, and then make sure a new FK matches the original

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,4 +62,6 @@ if(CATKIN_ENABLE_TESTING)
   # Compares a known solution for a robot with varying joint "signs"
   catkin_add_gtest(${PROJECT_NAME}-test-sign-corrections test/sign_corrections_tests.cpp)
 
+  catkin_add_gtest(${PROJECT_NAME}-fk-ik test/fk_ik_tests.cpp)
+
 endif() # end catkin_enable_testing
