--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
 
   <maintainer email="jmeyer@swri.org">Jon Meyer</maintainer>
   <author email="jmeyer@swri.org">Jon Meyer</author>
+  <author email="jeroen.demaeyer@kuleuven.be">Jeroen De Maeyer</author>
 
   <license>GPLv3</license>
 
