--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
   <author email="jmeyer@swri.org">Jon Meyer</author>
   <author email="jeroen.demaeyer@kuleuven.be">Jeroen De Maeyer</author>
 
-  <license>GPLv3</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
