--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
     - ROS_DISTRO=melodic   # ROS distro to test for
     - ROS_REPO=ros         # ROS binary repository [ros | ros-shadow-fixed]
     - TEST_BLACKLIST=      # list packages, for which to skip the unittests
-    - WARNINGS_OK=false    # Don't accept warnings [true | false]
+    - WARNINGS_OK=true    # Don't accept warnings [true | false]
   matrix:  # define various jobs
   #- TEST=clang-format    # check code formatting for compliance to .clang-format rules
   #- TEST=clang-tidy-fix  # perform static code analysis and compliance check against .clang-tidy rules
