--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>eigen</depend>
 
   <export>
   </export>
