--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   global:
     - CCACHE_DIR=$HOME/.ccache
     - ROS_REPO=ros
+    - CMAKE_ARGS="-DENABLE_TESTS=ON"
   matrix:
     - ROS_DISTRO="kinetic"
     - ROS_DISTRO="melodic"
