--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,12 +68,11 @@ export(EXPORT ${PROJECT_NAME}-targets FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT
 #############
 ## Testing ##
 #############
-option(ENABLE_TESTS "Enable tests" OFF)
-if (${ENABLE_TESTS})
+if (ENABLE_TESTS)
   enable_testing()
   add_custom_target(run_tests ALL
       WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-      COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> -V)
+      COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> -O "${PROJECT_NAME}_test_results.txt")
 
   add_subdirectory(test)
 endif()
