--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,53 @@
 sudo: required
-dist: trusty
-language: generic
-
-cache:
-  directories:
-    - $HOME/.ccache
 
 git:
   quiet: true
 
 env:
   global:
-    - CCACHE_DIR=$HOME/.ccache
     - ROS_REPO=ros
     - CMAKE_ARGS="-DENABLE_TESTS=ON"
-  matrix:
-    - ROS_DISTRO="kinetic"
-    - ROS_DISTRO="melodic"
+
+jobs:
+  include:
+    - os: linux
+      dist: trusty
+      language: cpp
+      env:
+      - ROS_DISTRO="kinetic"
+      - CCACHE_DIR=$HOME/.ccache
+      cache:
+        directories:
+          - $HOME/.ccache
+    - os: linux
+      dist: xenial
+      language: cpp
+      env:
+      - ROS_DISTRO="melodic"
+      - CCACHE_DIR=$HOME/.ccache
+      cache:
+        directories:
+          - $HOME/.ccache
+    - os: windows
+      language: cpp
 
 install:
-  - git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config; fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+        unset CXX CXX_FOR_BUILD CC CC_FOR_BUILD
+        choco feature disable -n=showDownloadProgress
+        cd ..
+        mkdir -p catkin_ws/src
+        mv opw_kinematics catkin_ws/src/
+        cd catkin_ws
+        choco uninstall mingw
+        choco source add -n=ros-win -s="https://roswin.azurewebsites.net/api/v2" --priority=1
+        choco install ros-melodic-ros_base -y --execution-timeout=0
+        wget https://gist.githubusercontent.com/Levi-Armstrong/e3bb008e579a99c52eb74235dff6735a/raw/travis_ci_windows.bat
+        cmd "/C call travis_ci_windows.bat install "
+    fi
 
 script:
-  - .ci_config/travis.sh
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then .ci_config/travis.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cmd "/C call travis_ci_windows.bat build "; fi
