--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,11 @@ list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_FEATURE_FOUND)
 
 # Create interface target
 add_library(${PROJECT_NAME} INTERFACE)
+target_compile_definitions(${PROJECT_NAME} INTERFACE _USE_MATH_DEFINES=ON)
 target_link_libraries(${PROJECT_NAME} INTERFACE)
-target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra)
+if(NOT MSVC)
+  target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra)
+endif()
 
 if(CXX_FEATURE_FOUND EQUAL "-1")
     target_compile_options(${PROJECT_NAME} INTERFACE -std=c++11)
