--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,25 +2,30 @@ cmake_minimum_required(VERSION 3.5.0)
 project(opw_kinematics VERSION 0.1.0 LANGUAGES CXX)
 
 find_package(Eigen3 REQUIRED)
+find_package(cmake_common_scripts REQUIRED)
+
 if(NOT EIGEN3_INCLUDE_DIRS)
   set(EIGEN3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
 endif()
 
-list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_FEATURE_FOUND)
+if(OPW_ENABLE_TESTING)
+  set(CLANG_ARGS "-line-filter=[{'name':'ikfast.h','lines':[[9999999,9999999]]}, {'name':'abb_irb2400_manipulator_ikfast_solver.cpp','lines':[[9999999,9999999]]}, {'name':'.h'}, {'name':'.hpp'}, {'name':'.cpp'}]" ${DEFAULT_CLANG_TIDY_ERROR_ARGS})
+else()
+  set(OPW_ENABLE_TESTING OFF)
+  set(CLANG_ARGS "-line-filter=[{'name':'ikfast.h','lines':[[9999999,9999999]]}, {'name':'abb_irb2400_manipulator_ikfast_solver.cpp','lines':[[9999999,9999999]]}, {'name':'.h'}, {'name':'.hpp'}, {'name':'.cpp'}]" ${DEFAULT_CLANG_TIDY_WARNING_ARGS})
+endif()
 
 # Create interface target
 add_library(${PROJECT_NAME} INTERFACE)
 target_compile_definitions(${PROJECT_NAME} INTERFACE _USE_MATH_DEFINES=ON)
 target_link_libraries(${PROJECT_NAME} INTERFACE)
+
 if(NOT MSVC)
   target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra)
 endif()
-
-if(CXX_FEATURE_FOUND EQUAL "-1")
-    target_compile_options(${PROJECT_NAME} INTERFACE -std=c++11)
-else()
-    target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_11)
-endif()
+target_compile_options(${PROJECT_NAME} INTERFACE -std=c++11)
+target_cxx_version(${PROJECT_NAME} INTERFACE VERSION 11)
+target_clang_tidy(${PROJECT_NAME} ${CLANG_ARGS})
 
 target_include_directories(${PROJECT_NAME} INTERFACE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
@@ -32,15 +37,19 @@ target_include_directories(${PROJECT_NAME} SYSTEM INTERFACE
 add_executable(${PROJECT_NAME}_node src/test.cpp)
 set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 target_link_libraries(${PROJECT_NAME}_node ${PROJECT_NAME})
+if(NOT MSVC)
+  target_compile_options(${PROJECT_NAME}_node PRIVATE -Wall -Wextra)
+endif()
+
+target_cxx_version(${PROJECT_NAME}_node PUBLIC VERSION 11)
+target_clang_tidy(${PROJECT_NAME}_node ARGUMENTS ${CLANG_ARGS})
+target_include_what_you_use(${PROJECT_NAME}_node ENABLE ${OPW_ENABLE_TESTING} ARGUMENTS ${DEFAULT_IWYU_ARGS})
+target_cppcheck(${PROJECT_NAME}_node ENABLE ${OPW_ENABLE_TESTING} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
 
 #############
 ## Install ##
 #############
-list (APPEND PACKAGE_LIBRARIES ${PROJECT_NAME})
-
-# Mark executables and/or libraries for installation
-install(TARGETS ${PACKAGE_LIBRARIES} EXPORT ${PROJECT_NAME}-targets DESTINATION lib)
-install(EXPORT ${PROJECT_NAME}-targets NAMESPACE opw_kinematics:: DESTINATION lib/cmake/${PROJECT_NAME})
+configure_package(NAMESPACE opw_kinematics TARGETS ${PROJECT_NAME})
 
 # Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}
@@ -49,33 +58,11 @@ install(DIRECTORY include/${PROJECT_NAME}
   PATTERN ".svn" EXCLUDE
  )
 
-install(FILES package.xml DESTINATION share/${PROJECT_NAME})
-
-# Create cmake config files
-include(CMakePackageConfigHelpers)
-configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}-config.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-  INSTALL_DESTINATION lib/cmake/${PROJECT_NAME}
-  NO_CHECK_REQUIRED_COMPONENTS_MACRO)
-
-write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-  VERSION ${PROJECT_VERSION} COMPATIBILITY ExactVersion)
-
-install(FILES
-  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
-  DESTINATION lib/cmake/${PROJECT_NAME})
-
-export(EXPORT ${PROJECT_NAME}-targets NAMESPACE opw_kinematics:: FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-targets.cmake)
-
 #############
 ## Testing ##
 #############
-if (ENABLE_TESTS)
+if (OPW_ENABLE_TESTING)
   enable_testing()
-  add_custom_target(run_tests ALL
-      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-      COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> -O "${PROJECT_NAME}_test_results.txt")
-
+  add_run_tests_target()
   add_subdirectory(test)
 endif()
