--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,20 +39,17 @@ if(NOT TARGET GTest::Main)
 endif()
 
 macro(opw_add_test name)
-  if(CXX_FEATURE_FOUND EQUAL "-1")
-      target_compile_options(${name} PRIVATE -std=c++11)
-  else()
-      target_compile_features(${name} PRIVATE cxx_std_11)
-  endif()
-  if(${CMAKE_VERSION} VERSION_LESS "3.10.0")
-      gtest_add_tests(${name} "" AUTO)
-  else()
-      gtest_discover_tests(${name})
-  endif()
+  target_cxx_version(${name} PUBLIC VERSION 11)
+  target_clang_tidy(${name} ARGUMENTS ${CLANG_ARGS})
+  target_include_what_you_use(${name} ARGUMENTS ${DEFAULT_IWYU_ARGS})
+  target_cppcheck(${name} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
+  add_gtest_discover_tests(${name})
+  add_dependencies(${name} ${PROJECT_NAME})
+  add_dependencies(run_tests ${name})
+
   if ( NOT ${GTest_FOUND} )
     add_dependencies(${name} GTest ${PROJECT_NAME})
   endif()
-  add_dependencies(run_tests ${name})
 endmacro()
 
 # Compares the opw solutions with an ikfast generated for the same robot model
