--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,9 +40,12 @@ endif()
 
 macro(opw_add_test name)
   target_cxx_version(${name} PUBLIC VERSION 11)
-  target_clang_tidy(${name} ARGUMENTS ${CLANG_ARGS})
-  target_include_what_you_use(${name} ARGUMENTS ${DEFAULT_IWYU_ARGS})
-  target_cppcheck(${name} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
+  if(NOT MSVC)
+    target_clang_tidy(${name} ARGUMENTS ${CLANG_ARGS})
+    target_include_what_you_use(${name} ARGUMENTS ${DEFAULT_IWYU_ARGS})
+    target_cppcheck(${name} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
+    target_code_coverage(${name} ALL)
+  endif()
   add_gtest_discover_tests(${name})
   add_dependencies(${name} ${PROJECT_NAME})
   add_dependencies(run_tests ${name})
@@ -54,17 +57,17 @@ endmacro()
 
 # Compares the opw solutions with an ikfast generated for the same robot model
 add_executable(${PROJECT_NAME}-test-2400-ikfast abb2400_ikfast_tests.cpp abb_irb2400_manipulator_ikfast_solver.cpp)
-target_link_libraries(${PROJECT_NAME}-test-2400-ikfast GTest::GTest GTest::Main ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME}-test-2400-ikfast PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
 target_compile_definitions(${PROJECT_NAME}-test-2400-ikfast PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_HAS_LIBRARY)
 opw_add_test(${PROJECT_NAME}-test-2400-ikfast)
 
 # Compares a known solution for a robot with varying joint "signs"
 add_executable(${PROJECT_NAME}-test-sign-corrections sign_corrections_tests.cpp)
-target_link_libraries(${PROJECT_NAME}-test-sign-corrections GTest::GTest GTest::Main ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME}-test-sign-corrections PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
 opw_add_test(${PROJECT_NAME}-test-sign-corrections)
 
 # Runs tests that iteratively solve FK then IK then confirm the new FK matches
 # Also contains some throughput tests
 add_executable(${PROJECT_NAME}-fk-ik fk_ik_tests.cpp)
-target_link_libraries(${PROJECT_NAME}-fk-ik GTest::GTest GTest::Main ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME}-fk-ik PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
 opw_add_test(${PROJECT_NAME}-fk-ik)
