--- a/.github/workflows/xenial_build.yml
+++ b/.github/workflows/xenial_build.yml
@@ -18,8 +18,8 @@ jobs:
       OS_CODE_NAME: xenial
       ROS_DISTRO: kinetic
       ROS_REPO: main
-      TARGET_WORKSPACE: '. github:ros-industrial/cmake_common_scripts#master'
-      ROSDEP_SKIP_KEYS: "iwyu cmake_common_scripts"
+      UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
+      ROSDEP_SKIP_KEYS: "iwyu ros_industrial_cmake_boilerplate"
       CCACHE_DIR: "/home/runner/work/opw_kinematics/opw_kinematics/Xenial-Build/.ccache"
       TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DOPW_ENABLE_TESTING=ON"
       AFTER_SCRIPT: 'catkin build -w $target_ws --no-deps --verbose opw_kinematics --make-args test'
