--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
   <license>Apache 2.0</license>
 
   <buildtool_depend>cmake</buildtool_depend>
-  <build_depend>cmake_common_scripts</build_depend>
+  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
   <depend>eigen</depend>
   <test_depend>gtest</test_depend>
 
