--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,13 +45,10 @@ if(NOT TARGET GTest::Main)
 endif()
 
 macro(opw_add_test name)
-  target_cxx_version(${name} PUBLIC VERSION 11)
-  if(NOT MSVC)
-    target_clang_tidy(${name} ARGUMENTS ${CLANG_ARGS})
-    target_include_what_you_use(${name} ARGUMENTS ${DEFAULT_IWYU_ARGS})
-    target_cppcheck(${name} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
-    target_code_coverage(${name} ALL)
-  endif()
+  target_cxx_version(${name} PUBLIC VERSION ${OPW_CXX_VERSION})
+  target_clang_tidy(${name} ENABLE ${OPW_ENABLE_CLANG_TIDY} ARGUMENTS ${OPW_CLANG_TIDY_ARGS})
+  target_include_what_you_use(${name} ENABLE ${OPW_ENABLE_TESTING} ARGUMENTS ${DEFAULT_IWYU_ARGS})
+  target_cppcheck(${name} ENABLE ${OPW_ENABLE_TESTING} ARGUMENTS ${DEFAULT_CPPCHECK_ARGS})
   add_gtest_discover_tests(${name})
   add_dependencies(${name} ${PROJECT_NAME})
   add_dependencies(run_tests ${name})
@@ -70,10 +67,12 @@ opw_add_test(${PROJECT_NAME}-test-2400-ikfast)
 # Compares a known solution for a robot with varying joint "signs"
 add_executable(${PROJECT_NAME}-test-sign-corrections sign_corrections_tests.cpp)
 target_link_libraries(${PROJECT_NAME}-test-sign-corrections PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
+target_compile_options(${PROJECT_NAME}-test-sign-corrections PRIVATE ${OPW_COMPILE_OPTIONS_PRIVATE})
 opw_add_test(${PROJECT_NAME}-test-sign-corrections)
 
 # Runs tests that iteratively solve FK then IK then confirm the new FK matches
 # Also contains some throughput tests
 add_executable(${PROJECT_NAME}-fk-ik fk_ik_tests.cpp)
 target_link_libraries(${PROJECT_NAME}-fk-ik PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
+target_compile_options(${PROJECT_NAME}-fk-ik PRIVATE ${OPW_COMPILE_OPTIONS_PRIVATE})
 opw_add_test(${PROJECT_NAME}-fk-ik)
