Add package debian github action leveraging cpack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,24 @@ if (OPW_ENABLE_TESTING)
   add_run_tests_target(ENABLE ${OPW_ENABLE_RUN_TESTING})
   add_subdirectory(test)
 endif()
+
+if (OPW_PACKAGE)
+  set(CPACK_PACKAGE_VENDOR "ROS-Industrial")
+  set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_LIST_DIR}/LICENSE)
+  set(CPACK_RESOURCE_FILE_README ${CMAKE_CURRENT_LIST_DIR}/Readme.md)
+
+  if (UNIX)
+    set(CPACK_GENERATOR "DEB")
+    set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
+    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${CMAKE_HOST_SYSTEM_PROCESSOR})
+    set(CPACK_DEBIAN_PACKAGE_MAINTAINER <https://github.com/Jmeyer1292/opw_kinematics>)
+    set(CPACK_DEBIAN_PACKAGE_DESCRIPTION ${pkg_extracted_description})
+    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS=ON)
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libeigen3-dev")
+  elseif(WIN32)
+    set(CPACK_GENERATOR "NuGet")
+    set(CPACK_NUGET_PACKAGE_DESCRIPTION ${pkg_extracted_description})
+    set(CPACK_NUGET_PACKAGE_DEPENDENCIES "Eigen")
+  endif()
+  include(CPack)
+endif()
